# AdvantToDo

./: .gitignore  FileHandler.py  README.md  RELEASE_NOTES.md  TaskCenterIntf.py  TaskFileModifier.py  pyproject.toml
todo-app/: __init__.py
todo-app/modules/controller/: MenuController.py  TaskController.py
todo-app/modules/coordinators/: AppCoordinator.py
todo-app/modules/helpers/: TaskFileModifier.py
todo-app/modules/interfaces/: TaskCenterIntf.py
todo-app/modules/model/: Task.py
todo-app/release/: RELEASE_NOTES.md
todo-app/tools/: FileHandler.py  datetimeParser.py  fileExaminationTools.py
